scripts/nullness/annotator/url7f15a160d2_timofei7_old_ai_assignments_tgz-pJ8-org_json_TestJ8.txt
../annotator/url7f15a160d2_timofei7_old_ai_assignments_tgz-pJ8-org_json_TestJ8/src/hw2_P2/P2Graphical.java:20: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url7f15a160d2_timofei7_old_ai_assignments_tgz-pJ8-org_json_TestJ8/src/hw2_P2/P2Graphical.java:43: error: cannot find symbol
	@Initializer public void init()
	 ^
  symbol:   class Initializer
  location: class P2Graphical
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors
